objects/Request__c.object
<CustomObject>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>The business unit of the case that the request was made on</description>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hudson&apos;s Bay</fullName>
                </value>
                <value>
                    <fullName>MHF</fullName>
                </value>
                <value>
                    <fullName>Lord + Taylor</fullName>
                </value>
                <value>
                    <fullName>Saks</fullName>
                </value>
                <value>
                    <fullName>Off 5th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Contact_Phone_Number__c</fullName>
        <description>The phone number of the case contact</description>
        <label>Case Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Case_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact on the case at the time the request was made</description>
        <inlineHelpText>This field contains the contact of the case at the time of the request</inlineHelpText>
        <label>Case Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <description>The number of the case the request was made on</description>
        <label>Case Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Origin__c</fullName>
        <description>The origin of the case related to the request</description>
        <label>Case Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email - Executive Escalation</fullName>
                </value>
                <value>
                    <fullName>Email - LT</fullName>
                </value>
                <value>
                    <fullName>Email - Service Excellence</fullName>
                </value>
                <value>
                    <fullName>Email - Service Excellence MHF</fullName>
                </value>
                <value>
                    <fullName>Email - Store Operation</fullName>
                </value>
                <value>
                    <fullName>Email - The Bay</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Live Agent</fullName>
                </value>
                <value>
                    <fullName>Marketing - LT</fullName>
                </value>
                <value>
                    <fullName>Marketing - Off 5th</fullName>
                </value>
                <value>
                    <fullName>Marketing - Saks</fullName>
                </value>
                <value>
                    <fullName>Marketing - The Bay</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Support Community</fullName>
                </value>
                <value>
                    <fullName>OMS</fullName>
                </value>
                <value>
                    <fullName>Email - Saks</fullName>
                </value>
                <value>
                    <fullName>Email - Off 5th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The case owner at the time the request was made</description>
        <label>Case Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <description>The status of the case at the time the request was made</description>
        <label>Case Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Team Lead Assistance Needed</fullName>
                </value>
                <value>
                    <fullName>Awaiting Service Excellence Review</fullName>
                </value>
                <value>
                    <fullName>POS Team</fullName>
                </value>
                <value>
                    <fullName>Pending Fraud Team</fullName>
                </value>
                <value>
                    <fullName>Follow Up</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>System Issue</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Awaiting Internal Response</fullName>
                </value>
                <value>
                    <fullName>Awaiting Customer Response</fullName>
                </value>
                <value>
                    <fullName>Response Received</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>MNR Review</fullName>
                </value>
                <value>
                    <fullName>Call Tag</fullName>
                </value>
                <value>
                    <fullName>Non Responsive Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <description>The case type of the case for the request</description>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>BTO - Big Ticket Order (New Purchases)</fullName>
                </value>
                <value>
                    <fullName>Credit Hold</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Delivery (WISMO)</fullName>
                </value>
                <value>
                    <fullName>Delivery Resolution</fullName>
                </value>
                <value>
                    <fullName>Exchange / Return / Allowance (ERA)</fullName>
                </value>
                <value>
                    <fullName>Gift Card(s)</fullName>
                </value>
                <value>
                    <fullName>Gift Registry</fullName>
                </value>
                <value>
                    <fullName>In Store Experience</fullName>
                </value>
                <value>
                    <fullName>Major Home Fashion</fullName>
                </value>
                <value>
                    <fullName>Order Inquiry</fullName>
                </value>
                <value>
                    <fullName>Order placed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Place an order</fullName>
                </value>
                <value>
                    <fullName>Product Information</fullName>
                </value>
                <value>
                    <fullName>Refunds/Credits</fullName>
                </value>
                <value>
                    <fullName>Returns</fullName>
                </value>
                <value>
                    <fullName>Rewards</fullName>
                </value>
                <value>
                    <fullName>Special Projects</fullName>
                </value>
                <value>
                    <fullName>Store Experience</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
                <value>
                    <fullName>Executive Escalation Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field captures the case that the request was for</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Requests (Case)</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cause_of_the_issue__c</fullName>
        <description>The cause of the issue</description>
        <label>Cause of the issue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User Error</fullName>
                </value>
                <value>
                    <fullName>Network Issue</fullName>
                </value>
                <value>
                    <fullName>UAD Bug</fullName>
                </value>
                <value>
                    <fullName>Commerce Cloud Bug</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IVR_Log__c</fullName>
        <description>The IVR Log of the call that created the Case</description>
        <inlineHelpText>The IVR Log of the call that created the Case</inlineHelpText>
        <label>IVR Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Description__c</fullName>
        <description>The description of the issue being raised by the agent</description>
        <inlineHelpText>Please describe the issue you are having. Place a screenshot if you have one.</inlineHelpText>
        <label>Issue Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Issue_Location__c</fullName>
        <description>The location of the agent associated with the case.</description>
        <label>Issue Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jackson</fullName>
                </value>
                <value>
                    <fullName>Cebu</fullName>
                </value>
                <value>
                    <fullName>El Salvador</fullName>
                </value>
                <value>
                    <fullName>Moncton</fullName>
                </value>
                <value>
                    <fullName>Davao</fullName>
                </value>
                <value>
                    <fullName>All Locations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <description>The type of issue the agent is experiencing</description>
        <label>Issue Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <description>This captures the order that may be causing the request</description>
        <label>Order Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Initiator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person who initiated the request</description>
        <label>Request Initiator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <description>The status of the request</description>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution_Notes__c</fullName>
        <label>Resolution Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Issue_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Cebu_Open_Requests</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Case__c</columns>
        <columns>Issue_Type__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Request_Initiator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress</value>
        </filters>
        <filters>
            <field>Issue_Location__c</field>
            <operation>equals</operation>
            <value>Cebu</value>
        </filters>
        <label>Cebu Open Requests</label>
    </listViews>
    <listViews>
        <fullName>Closed_Requests</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Case__c</columns>
        <columns>Issue_Type__c</columns>
        <columns>Request_Initiator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Closed Requests</label>
    </listViews>
    <listViews>
        <fullName>Davao_Open_Requests</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Case__c</columns>
        <columns>Issue_Type__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Request_Initiator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress</value>
        </filters>
        <filters>
            <field>Issue_Location__c</field>
            <operation>equals</operation>
            <value>Davao</value>
        </filters>
        <label>Davao Open Requests</label>
    </listViews>
    <listViews>
        <fullName>El_Salvador_Open_Requests</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Case__c</columns>
        <columns>Issue_Type__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Request_Initiator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress</value>
        </filters>
        <filters>
            <field>Issue_Location__c</field>
            <operation>equals</operation>
            <value>El Salvador</value>
        </filters>
        <label>El Salvador Open Requests</label>
    </listViews>
    <listViews>
        <fullName>Jackson_Open_Requests</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Case__c</columns>
        <columns>Issue_Type__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Request_Initiator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress</value>
        </filters>
        <filters>
            <field>Issue_Location__c</field>
            <operation>equals</operation>
            <value>Jackson</value>
        </filters>
        <label>Jackson Open Requests</label>
    </listViews>
    <listViews>
        <fullName>Moncton_Open_Requests</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Case__c</columns>
        <columns>Issue_Type__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Request_Initiator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress</value>
        </filters>
        <filters>
            <field>Issue_Location__c</field>
            <operation>equals</operation>
            <value>Moncton</value>
        </filters>
        <label>Moncton Open Requests</label>
    </listViews>
    <listViews>
        <fullName>My_Requests</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Case__c</columns>
        <columns>Issue_Type__c</columns>
        <columns>Request_Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Requests</label>
    </listViews>
    <listViews>
        <fullName>Open_Requests_affecting_all_locations</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Case__c</columns>
        <columns>Issue_Type__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Request_Initiator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress</value>
        </filters>
        <filters>
            <field>Issue_Location__c</field>
            <operation>equals</operation>
            <value>All Locations</value>
        </filters>
        <label>Open Requests Affecting All Locations</label>
    </listViews>
    <nameField>
        <displayFormat>REQ-{000}</displayFormat>
        <label>Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <recordTypes>
        <fullName>Case_Specific_Requests</fullName>
        <active>true</active>
        <description>Record Type for requests that are related to a case</description>
        <label>Case Specific Requests</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Technical_Requests</fullName>
        <active>true</active>
        <description>Requests specific to issues on a case</description>
        <label>General Technical Requests</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Request_01_Cannot_Change_Historical_Info</fullName>
        <active>true</active>
        <description>This validation rule prevents the changing of fields that are stamped on its creation.</description>
        <errorConditionFormula>NOT( $Profile.Name = &apos;System Administrator&apos;) &amp;&amp;  RecordType.DeveloperName = &apos;Case_Specific_Requests&apos; &amp;&amp;
  OR(ISCHANGED( Business_Unit__c ),ISCHANGED( Case_Number__c ),ISCHANGED(Case_Origin__c), ISCHANGED( Case_Owner__c ),ISCHANGED( Case_Status__c ),ISCHANGED( Case_Type__c ),ISCHANGED( Order_Number__c ),ISCHANGED( Request_Initiator__c ),ISCHANGED( 	Issue_Location__c),ISCHANGED( 	IVR_Log__c ))</errorConditionFormula>
        <errorMessage>You cannot change case information after a request is made.</errorMessage>
    </validationRules>
</CustomObject>